--- a/files/src/index.css
+++ b/files/src/index.css
@@ -16,7 +16,7 @@ nav {
 }
 
 a {
-  color: var(--color-primary);
+  color: var(--color-text);
   text-decoration: none;
 }
 
@@ -26,7 +26,8 @@ a:hover{
 
 header, main, body {
   font-family: var(--font-family-primary);
-  background-color: var(--color-secondary);
+  background-color: var(--color-background);
+  color: var(--color-text);
 }
 
 /*
@@ -184,14 +185,14 @@ footer {
 .product-description p {
   font-size: var(--font-size-medium);
   margin-bottom: var(--spacing-small);
-  color: #555; 
+  color: var(--color-text);
 }
 
 /* Message Seller Button */
 .message-seller-button {
   padding: var(--spacing-small) var(--spacing-medium);
-  background-color: var(--color-primary);
-  color: var(--color-secondary);
+  background-color: var(--color-button);
+  color: var(--color-button-text);
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -237,14 +238,13 @@ footer {
   align-items: center;
   padding: var(--spacing-medium);
   font-family: var(--font-family-primary);
-  background-color: #f8f9fa;
 }
 
 label {
   font-weight: bold;
   margin-bottom: 5px;
   display: block;
-  color: #333;
+  color: var(--color-text);
 }
 
 input, textarea {
@@ -269,8 +269,8 @@ textarea {
 
 button {
   padding: var(--spacing-small) var(--spacing-medium);
-  background-color: var(--color-primary);
-  color: var(--color-secondary);
+  background-color: var(--color-button);
+  color: var(--color-button-text);
   border: none;
   border-radius: 0.5em;
   font-size: var(--font-size-medium);
@@ -291,8 +291,8 @@ input[type="file"] {
 input[type="file"]::file-selector-button {
   padding: 0.7em;
   border: none;
-  background-color: var(--color-primary);
-  color: var(--color-secondary);
+  background-color: var(--color-button);
+  color: var(--color-button-text);
   border-radius: 0.5em;
   cursor: pointer;
 }
@@ -327,4 +327,13 @@ input[type="file"]::file-selector-button:hover {
   }
 }
 
+.dark-mode-toggle {
+  display: flex;
+  justify-content: right;
+}
 
+.dark-mode-toggle input {
+  width: 4em;
+  height: 1em;
+  cursor: pointer;
+}
